# tactile-teleop-python-sdk

./: .gitignore  README.md  pyproject.toml  tactile.toml.example  test_config.py
examples/: composition_pattern_example.py  config_example.py  control_provider_example.py  multi_camera_example.py  quick_example.py  robot_sim_example.py  tactile_api_example.py
src/tactile_teleop/: __init__.py  api.py  config.py
src/tactile_teleop/camera/: base_camera.py  camera_streamer.py  dual_camera_opencv.py
src/tactile_teleop/camera/calibration/: stereo_calibration_vr_20250804_145002.pkl
src/tactile_teleop/inputs/: base.py  vr_controller.py
src/tactile_teleop/utils/: geometry.py  livekit_auth.py
src/tactile_teleop_sdk/: __init__.py  api.py  base_config.py  config.py  default.toml  events.py  exceptions.py  factory_configs.py  lerobot.py  protocol_auth.py  recorder.py
src/tactile_teleop_sdk/camera/: __init__.py  camera.py  camera_config.py  camera_recorder.py  camera_shared_data.py  camera_streamer.py  monocular_camera.py  stereo_camera.py
src/tactile_teleop_sdk/camera/camera_publisher/: __init__.py  base.py  livekit.py
src/tactile_teleop_sdk/camera/vr_camera_streamer/: __init__.py  base.py  livekit.py
src/tactile_teleop_sdk/control_providers/: base.py  pg_vr_controller.py
src/tactile_teleop_sdk/control_subscribers/: __init__.py  base.py  pg_vr_controller.py
src/tactile_teleop_sdk/inputs/: base.py  vr_controller.py
src/tactile_teleop_sdk/operator_subscribers/: base.py
src/tactile_teleop_sdk/publisher_node/: __init__.py  base.py  livekit.py
src/tactile_teleop_sdk/subscriber_node/: __init__.py  base.py  livekit.py
src/tactile_teleop_sdk/utils/: geometry.py  visualizer.py
