[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile-teleop-python-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit>=1.0.12",
    "livekit-api>=1.0.5",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[dependency-groups]
test = [
    "opencv-python>=4.8.0",
]
visualization = [
    "meshcat>=0.3.2",
]
